# par-slice-rs

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: bfs_data_race.rs  bfs_pointer.rs  bfs_unsafe.rs
src/: constructor.rs  lib.rs  unsafe_cell_slice.rs  unsafe_slice_access.rs
src/impls/: collection.rs  conversion.rs  index_wrapper.rs  indexing.rs  mod.rs  unsafe_cell_chunk_slice.rs  unsafe_cell_slice.rs
src/impls/constructor/: data_race.rs  mod.rs  no_ref.rs  pointer.rs  unsafe_access.rs  unsafe_index.rs
src/traits/: collection.rs  conversion.rs  data_race.rs  indexing.rs  mod.rs  no_ref.rs  pointer.rs  unsafe_access.rs  unsafe_index.rs
tests/: bfs_example.rs  borrowed_data_race_chunk_slice.rs  borrowed_data_race_slice.rs  borrowed_no_ref_chunk_slice.rs  borrowed_no_ref_slice.rs  borrowed_pointer_chunk_slice.rs  borrowed_pointer_slice.rs  borrowed_unsafe_chunk_slice.rs  borrowed_unsafe_slice.rs  owned_data_race_chunk_slice.rs  owned_data_race_slice.rs  owned_no_ref_chunk_slice.rs  owned_no_ref_slice.rs  owned_pointer_chunk_slice.rs  owned_pointer_slice.rs  owned_unsafe_chunk_slice.rs  owned_unsafe_slice.rs
