[package]
name = "par_slice"
version = "1.0.0"
edition = "2021"
authors = ["Matteo Dell'Acqua <dellacqua.matteo99@gmail.com>"]
description = "Slices that may be accessed from multiple threads with different levels of safety"
repository = "https://github.com/MatteoH2O1999/par-slice-rs"
license = "MIT"
keywords = ["slice", "index", "parallel", "access", "concurrent"]
categories = ["concurrency"]
rust-version = "1.84"

[[example]]
name = "bfs_pointer"
test = true

[[example]]
name = "bfs_data_race"
test = true

[[example]]
name = "bfs_unsafe"
test = true
